# TFADS_to_FCS

./: .gitignore  README.md  app.py  pyproject.toml
.github/workflows/: release.yml
src/tfads_to_fcs/: __init__.py  __main__.py  converter.py  gui.py
tests/: test_converter_regressions.py
